--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 
 # Project
 version=1.0.0
-group=org.infernalstudios.archeryexp
+group=net.deadlydiamond98.koalalib
 
 # Common
 minecraft_version=1.20.1
@@ -20,11 +20,11 @@ fabric_version=0.92.1+1.20.1
 fabric_loader_version=0.15.10
 
 # Mod options
-mod_name=ArcheryExpansion
-mod_author=Infernal Studios
-mod_id=archeryexp
-license=Apache-2.0
-description=Fill Later
+mod_name=Koala Lib
+mod_author=Deadlydiamond98
+mod_id=koalalib
+license=Custom
+description=A Library Mod with a bunch of things to help me with my mods
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
