--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 
 # Project
 version=1.0.0
-group=net.deadlydiamond98.koalalib
+group=net.deadlydiamond98.findmyfriendsfix
 
 # Common
 minecraft_version=1.20.1
@@ -20,11 +20,11 @@ fabric_version=0.92.1+1.20.1
 fabric_loader_version=0.15.10
 
 # Mod options
-mod_name=Koala Lib
+mod_name=Find My Friends Fix
 mod_author=Deadlydiamond98
-mod_id=koalalib
+mod_id=findmyfriendsfix
 license=Custom
-description=A Library Mod with a bunch of things to help me with my mods
+description=A Client-Side Remake of the Find My Friends Mod
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
