--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ mod_name=Find My Friends Fix
 mod_author=Deadlydiamond98
 mod_id=findmyfriendsfix
 license=Custom
-description=A Client-Side Remake of the Find My Friends Mod
+description=A Remake of the Find My Friends Mod
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
