--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 
 # Project
 version=1.0.0
-group=net.deadlydiamond98.findmyfriendsfix
+group=net.deadlydiamond98.way
 
 # Common
 minecraft_version=1.20.1
@@ -20,11 +20,11 @@ fabric_version=0.92.1+1.20.1
 fabric_loader_version=0.15.10
 
 # Mod options
-mod_name=Find My Friends Fix
+mod_name=Where Are You (WAY)
 mod_author=Deadlydiamond98
-mod_id=findmyfriendsfix
+mod_id=way
 license=Custom
-description=A Remake of the Find My Friends Mod
+description=A small accessibility-based multiplayer utility mod that allows you to easily find the WAY to your friends by highlighting them with a distance tag and an outline when you press the M key.
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
